force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/sugati__Smart_Suggestion_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Smart Suggestion Setting</label>
</CustomObject>