force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/fields/sugati__Data_months_to_consider__c.field-meta.xml
<CustomField>
    <fullName>sugati__Data_months_to_consider__c</fullName>
    <defaultValue>24</defaultValue>
    <description>How many months back should we check when creating suggestion rules?</description>
    <inlineHelpText>How many months back should we check when creating suggestion rules?</inlineHelpText>
    <label>Data months to consider</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>