force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/fields/sugati__Maximum_suggestions_per_trigger__c.field-meta.xml
<CustomField>
    <fullName>sugati__Maximum_suggestions_per_trigger__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Maximum number of suggestions to keep for each trigger.</description>
    <inlineHelpText>After scoring suggestions by confidence (and support), only the top K suggestions are kept per trigger to avoid noise. Example: If set to 8 and there are 15 candidates, only the best 8 (highest confidence, then support) are saved.</inlineHelpText>
    <label>Maximum suggestions per trigger</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>