force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/fields/sugati__Minimum_confidence_level__c.field-meta.xml
<CustomField>
    <fullName>sugati__Minimum_confidence_level__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Minimum confidence required for a suggestion to be kept.</description>
    <inlineHelpText>Confidence measures how often the suggestion follows the trigger, given all times the trigger appears. We use smoothing: (support + 1) / (triggerCount + 2). Enter a value between 0 and 100%. Example: triggerCount=20, support=5 → smoothed confidence ≈ (5+1)/(20+2)=27%. With MIN_CONFIDENCE=30%, this suggestion is filtered out.</inlineHelpText>
    <label>Minimum confidence level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>