force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/fields/sugati__Minimum_support__c.field-meta.xml
<CustomField>
    <fullName>sugati__Minimum_support__c</fullName>
    <defaultValue>6</defaultValue>
    <description>Minimum number of times the trigger and suggestion must occur together before a rule is considered.</description>
    <inlineHelpText>Filters out “one‑off” or rare coincidences. If set to 6, a pair must co‑occur at least 6 times to be eligible. Example: If Airport A → Hotel B co‑occurs 5 times, it’s ignored when MIN_SUPPORT = 6.</inlineHelpText>
    <label>Minimum support</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>