force-app/main/default/objects/sugati__Smart_Suggestion_Setting__c/fields/sugati__Minimum_trigger_count__c.field-meta.xml
<CustomField>
    <fullName>sugati__Minimum_trigger_count__c</fullName>
    <defaultValue>6</defaultValue>
    <description>Minimum number of times the trigger must appear before generating any rule for it.</description>
    <inlineHelpText>Ensures confidence is based on enough observations of the trigger. Example: If Airport A appears only 4 times and this is set to 6, no rules are created for Airport A yet—even if co‑occurrences meet MIN_SUPPORT—because the sample is too small for a reliable confidence.</inlineHelpText>
    <label>Minimum trigger count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>